Исправил ошибки после слияния